--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "co-pilot",
+  "name": "PendoluHelper",
   "version": "1.0.0",
-  "description": "<img src=\"https://socialify.git.ci/SlaughterBlade/Co-Pilot/image?description=1&descriptionEditable=Co-Pilot%20is%20a%20discord%20Bot%20designed%20to%20be%20the%20all-in-one%2C%20open-source%20Discord%20bot%20that%20handles%20all%20your%20server%20needs.&font=Raleway&logo=https%3A%2F%2Fi.ibb.co%2FgTdF2sy%2Fco-pilot-logo.png&pattern=Plus&theme=Dark\" alt=\"Co-Pilot\" width=\"1040\" height=\"320\" />",
+  "description": <p align="center">
+<img src="assets/Logo.png" alt="PendoluHelper" width="320" height="320" class="center"/>
+<p>PendoluHelper is a discord Bot designed to be the all-in-one, open-source Discord bot that handles all your server needs.</p>
+</p>,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
